# process-complex-data

./: .coveragerc  .gitignore  .pre-commit-config.yaml  Makefile  README.md  dev-requirements.txt  gitignore  requirements.txt  run.py  setup.cfg
.github/workflows/: main.yml  tests.yml
complexes/: constants.py  get_complex_name.py  process_complex.py  queries.py  run_process.py
complexes/tests/: test_get_annotated_name.py  test_get_complexes_name.py  test_get_data_from_complex_portal_ftp.py  test_get_derived_name.py  test_process_complex.py  test_utility.py
complexes/utils/: get_annotated_name.py  get_data_from_complex_portal_ftp.py  get_data_from_graph_db.py  get_derived_name.py  utility.py
pdbe_complexes/: constants.py  get_complex_name.py  log.py  main.py  process_complex.py  queries.py
pdbe_complexes/tests/: test_get_complexes_name.py  test_get_data_from_complex_portal_ftp.py  test_get_data_from_graph_db.py  test_get_derived_name.py  test_process_complex.py  test_utility.py
pdbe_complexes/utils/: get_data_from_complex_portal_ftp.py  get_data_from_graph_db.py  get_derived_name.py  operations.py  utility.py
sample/: secondary_updates_20230310_1813.txt
sample_UniProt_file/: secondary_updates_20230218_1430.txt
tests/: test_annotated_name.py  test_complex_data.py  test_complexes_name.py  test_data_from_complex_portal.py  test_derived_name.py  test_get_annotated_name.py  test_get_complexes_name.py  test_get_data_from_complex_portal_ftp.py  test_get_data_from_graph_db.py  test_get_derived_name.py  test_process_complex.py  test_utility.py
(+7 files in other folders)
