[metadata]
name = starter
author = Stephen Anyango
author_email = anyango@ebi.ac.uk
description = Starter pack for PDBe Python projects
version = attr: __version__.__version__
url = https://gitlab.ebi.ac.uk/pdbe/python-starter
keywords =
  starter
classifiers =
  Development Status :: 4 - Beta
  Intended Audience :: Life Science/Structural Biology
  Intended Audience :: Developers
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
long_description = file: README.md
long_description_content_type = text/markdown
license_files =
  LICENSE.txt

[options]
python_requires = >= 3.7
packages = find_namespace:
zip_safe: False
include_package_data = True
install_requires =
  requests

[options.extras_require]
test =
  pytest

[options.entry_points]
console_scripts =
  starter = starter.app:main
